Thu Mar  8 16:12:46 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Fixed reference counting problem.

Thu Mar  8 07:50:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Client.mpc:
          Fixed export macros

Wed Mar  7 18:33:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Client.mpc:
        * tao/IFR_Client/IFR_Client_Adapter_Impl.h:
        * tao/IFR_Client/IFR_Client_Adapter_Impl.cpp:
          Fixed export macros

Wed Mar  7 15:27:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tests/DynValue_Test/Analyzer.cpp:
        * tao/DynaicAny/DynCommon.cpp:
        * tao/DynaicAny/DynEnum_i.cpp:
        * tao/DynaicAny/DynValueCommon_i.cpp:
        * tao/DynaicAny/DynValueBox_i.cpp:
        * tao/DynaicAny/DynUnion_i.cpp:
          Coverity problems addressed.

Wed Mar  7 14:16:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Base.pidl:
          Include normal idl file

        * tao/IFR_Client/IFR_Client.mpc:
          Generate export headers

        * tao/IFR_Client/ifr_client_export.h:
        * tao/IFR_Client/ifr_client_skel_export.h:
          Removed from svn, now generated as part of the build

Wed Mar  7 10:02:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for release

Wed Mar 07 09:04:40 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.0 released.

Fri Mar  2 12:33:17 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Client.mpc:
        * tao/tao.mpc:
          Added missing files for install

Thu Mar 1 13:52:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tao/DynaicAny/DynValue_i.cpp:
        * tests/DynValue_Test/Analyzer.cpp:
          Missing .in () for vars.

Thu Mar 1 11:45:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>