@@ -6,7 +6,8 @@
 #include "tao/Utils/ORB_Manager.h"
 
 // Constructor
-AccountManager_i::AccountManager_i (void)
+AccountManager_i::AccountManager_i (void) :
+  orb_manager_ (0)
 {
   // no-op
 }
